--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -83,7 +83,7 @@
     } /* end header__nav.open */
 
     .header__hamburger {
-      background: url(../../images/icon-close-menu.svg) 0 0 no-repeat;
+      background: url(../images/icon-close-menu.svg) 0 0 no-repeat;
     }
   } /* end header nav container */
 } /* end mq */
